# clieditor

./: .coderabbit.yaml  CMakeLists.txt  README.md  config.ini
.github/workflows/: ci.yml
data/syntax/: ini.ini  md.ini
src/: main.c
src/common/: buffer.c  buffer.h  callback.c  callback.h  colors.c  colors.h  config.c  config.h  iniparser.c  iniparser.h  logging.c  logging.h  stack.c  stack.h  string.c  string.h  table.c  table.h  tableiterator.c  tableiterator.h  typedtable.c  typedtable.h  utf8.c  utf8.h  utf8_helper.c  utf8_helper.h  utf8string.c  utf8string.h
src/core/: canvas.c  canvas.h  cell.c  cell.h  input.c  input.h  screen.c  screen.h  style.c  style.h  terminal.c  terminal.h  textbuffer.c  textbuffer.h  timer.c  timer.h  utf8.c  utf8.h  utf8string.c  utf8string.h  widget.c  widget.h
src/display/: canvas.c  canvas.h  cell.c  cell.h  style.c  style.h  widget.c  widget.h
src/document/: line.c  line.h  textbuffer.c  textbuffer.h  textcursor.c  textcursor.h  textedit.c  textedit.h  textio.c  textio.h  textlayout.c  textlayout.h  textselection.c  textselection.h
src/io/: file.c  file.h  input.c  input.h  screen.c  screen.h  terminal.c  terminal.h  timer.c  timer.h
src/syntax/: definition.c  definition.h  highlighting.c  highlighting.h  loader.c  loader.h  textlayoutbindings.c  textlayoutbindings.h
src/utils/: buffer.c  logging.c  logging.h
src/widgets/: app.c  app.h  bottombar.c  bottombar.h  editor.c  editor.h  frame.c  frame.h  label.c  label.h  test.h
src/widgets/components/: bottombar.c  bottombar.h  editor.c  editor.h  editorview.c  editorview.h  linenumbers.c  linenumbers.h
src/widgets/primitives/: frame.c  frame.h  label.c  label.h  menu.c  menu.h  notification.c  notification.h
tests/: CMakeLists.txt  test_iniparser.c  test_input.c  test_label.c  test_line.c  test_logging.c  test_string.c  test_syntax_definition.c  test_syntax_highlighting.c  test_syntax_loader.c  test_syntax_textlayoutbindings.c  test_table.c  test_tableiterator.c  test_terminal.c  test_textbuffer.c  test_textedit.c  test_textlayout.c  test_typedtable.c  test_utf8.c  test_utf8_helper.c  test_utf8string.c  test_widget.c
tools/: CMakeLists.txt  keycodes.c
